--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     width:400px;
     height:400px;
     position:absolute;
-    background-color:rgb(234, 197, 129);
+    background-color:red(234, 197, 129);
     border-radius:20px;
     margin:5px;
 }
