--- a/index.html
+++ b/index.html
@@ -252,7 +252,8 @@
 }
 .boxbl{
     border:1px solid rgb(214, 172, 66);
-    height:0px;
+    height:0px
+
     margin:0px 0px 170px 90px;
     width:0px;
     bottom:0;
@@ -260,7 +261,7 @@
     position:absolute;
 }
 .arrbl{
-    border:1px solid black;
+    border:1px solid pink;
     height:130px;
     width:0px;
     transform:rotate(34deg);
@@ -285,7 +286,7 @@
 }
         </style>
     </head>
-    <body bgcolor="red">
+    <body bgcolor="blue">
             
                 <div class="bod">
                     <div class="inner-body">
