--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
     position:absolute;
 }
 .arrbr{
-    border:1px solid black;
+    border:1px solid yellow;
     height:130px;
     width:0px;
     bottom:0;
