--- a/index.html
+++ b/index.html
@@ -8,46 +8,46 @@
             .bod{
     height:410px;
     width:410px;
-    border:10px solid #0a0000;
+    border:10px solid #ce1010;
     margin:60px 40px 1px 400px;
     
     position: absolute;
     border-radius:10px;
-    background-color: rgb(7, 7, 0);
+    background-color: rgb(78, 78, 68);
     }
 .inner-body{
-    border:1px solid rgb(74, 7, 243);
+    border:1px solid rgb(129, 98, 221);
     width:400px;
     height:400px;
     position:absolute;
-    background-color:red(234, 197, 129);
+    background-color:rgb(21, 15, 5);
     border-radius:20px;
     margin:5px;
 }
 .left-top-circle{
     height:25px;
     width:25px;
-    border:1px solid #060000;
+    border:1px solid #f3f0f0;
     position:absolute;
     left:0;
     top:0;
-    background-color:black;
+    background-color:rgb(27, 25, 25);
     border-radius:50px;
 }
 .right-top-circle{
     height:25px;
     width:25px;
-    border:1px solid #050000;
+    border:1px solid #eeeeee;
     position:absolute;
     right:0;
     top:0;
-    background-color:black;
+    background-color:rgb(11, 10, 10);
     border-radius:50px;
 }
 .left-bottom-circle{
     height:25px;
     width:25px;
-    border:1px solid #060000;
+    border:1px solid #f1eded;
     position:absolute;
     /* margin:px;  */
     left:0;
@@ -58,7 +58,7 @@
 .right-bottom-circle{
     height:25px;
     width:25px;
-    border:0px solid #484848;
+    border:0px solid #ece2e2;
     position:absolute;
     /*margin:10px;*/
     right:0;
@@ -67,89 +67,89 @@
     border-radius:50px;
 }
 .position-top{
-    border:1px solid black;
+    border:1px solid rgb(109, 163, 234);
     border-radius:20px;
     height:20px;
     width:275px;
     margin:50px 5px 5px 63px;
     top:0;
-    background-color:rgba(175, 228, 59, 0.208);
+    background-color:rgba(210, 211, 207, 0.208);
     position: absolute;
 }
 .position-bottom{
-    border:1px solid black;
+    border:1px solid rgb(152, 24, 24);
     border-radius:20px;
     height:20px;
     width:275px;
     margin:5px 5px 50px 63px;
     bottom:0;
-    background-color:rgba(175, 228, 59, 0.208);
+    background-color:rgba(148, 168, 104, 0.208);
     position: absolute;
 }
 .position-left{
-    border:1px solid black;
+    border:1px solid rgb(119, 71, 71);
     border-radius:20px;
     height:260px;
     width:20px;
     margin:70px 5px 48px 50px;
     left:1;
-    background-color:rgba(175, 228, 59, 0.208);
+    background-color:rgba(158, 166, 140, 0.208);
     position: absolute;
 }
 .position-right{
-    border:1px solid black;
+    border:1px solid rgb(153, 147, 147);
     border-radius:20px;
     height:260px;
     width:20px;
     margin:70px 50px 48px 5px;
     /* top:1; */
     right:0;
-    background-color:rgba(175, 228, 59, 0.208);
+    background-color:rgba(103, 109, 91, 0.208);
     position: absolute;
 }
 .box-left-circle{
-    border:1px solid rgb(14, 3, 3);
+    border:1px solid rgb(252, 248, 248);
     border-radius:50px;
     height:19px;
     width:19px;
-    background-color: rgb(229, 10, 10);
+    background-color: rgb(80, 74, 74);
     margin:0px;
     /* top:0; */
     left:0;
     position:absolute;
 }
 .box-right-circle{
-    border:1px solid rgb(14, 3, 3);
+    border:1px solid rgb(183, 62, 62);
     border-radius:50px;
     height:19px;
     width:19px;
-    background-color: rgb(229, 10, 10);
+    background-color: rgb(39, 34, 136);
     margin:0px;
     right:0;
     position:absolute;
 }
 .box-top-circle{
-    border:1px solid rgb(14, 3, 3);
+    border:1px solid rgb(144, 30, 30);
     border-radius:50px;
     height:19px;
     width:19px;
-    background-color: rgb(229, 10, 10);
+    background-color: rgb(149, 36, 98);
     margin:0px;
     top:0;
     position:absolute;
 }
 .box-bottom-circle{
-    border:1px solid rgb(14, 3, 3);
+    border:1px solid rgb(196, 187, 187);
     border-radius:50px;
     height:19px;
     width:19px;
-    background-color: rgb(229, 10, 10);
+    background-color: rgb(167, 153, 153);
     margin:0px;
     bottom:0;
     position:absolute;
 }
 .small-topl-circle{
-    border:1px solid white;
+    border:1px solid rgb(16, 14, 14);
     border-radius:50px;
     height: 8px;
     width:8px;
@@ -159,7 +159,7 @@
     margin:66px 5px 5px 58px;
 }
 .small-topr-circle{
-    border:1px solid white;
+    border:1px solid rgb(107, 99, 141);
     border-radius:50px;
     height: 8px;
     width:8px;
@@ -169,7 +169,7 @@
     margin:66px 58px 5px 5px;
 }
 .small-bottoml-circle{
-    border:1px solid white;
+    border:1px solid rgb(33, 35, 75);
     border-radius:50px;
     height: 8px;
     width:8px;
@@ -179,7 +179,7 @@
     margin:5px 5px 66px 58px;
 }
 .small-bottomr-circle{
-    border:1px solid white;
+    border:1px solid rgb(177, 59, 59);
     border-radius:50px;
     height: 8px;
     width:8px;
@@ -193,16 +193,16 @@
     border-radius:50px;
     height:100px;
     width:100px;
-    background-color:rgb(20, 198, 17);
+    background-color:rgb(153, 168, 153);
     margin:150px 0px 0px 150px;
     position:absolute;
 }
 .inner-circle-inner{
-    border:2px solid rgb(237, 21, 147);
+    border:2px solid rgb(100, 16, 156);
     border-radius:50px;
     height:90px;
     width:90px;
-    background-color: rgb(15, 131, 208);
+    background-color: rgb(36, 185, 31);
     margin:3px 1px 1px 3px;
     position:absolute;
 }
@@ -210,12 +210,12 @@
    height:80px; 
    width: 80px;
    border-radius:50px;
-   border:1px solid black;
+   border:1px solid rgb(42, 84, 152);
    margin:4px;
    position:absolute;
 }
 .boxtl{
-    border:1px solid rgb(4, 0, 0);
+    border:1px solid rgb(175, 64, 64);
     margin:0px;
     height:px;
     width:px;
@@ -224,7 +224,7 @@
     position:absolute;
 }
 .arrtl{
-    border:1px solid black;
+    border:1px solid rgb(140, 155, 23);
     height:130px;
     width:0px;
     left:0;
@@ -233,7 +233,7 @@
     position:absolute;
 }
 .boxtr{
-    border:1px solid rgb(2, 0, 0);
+    border:1px solid rgb(123, 108, 108);
     margin:0px;
     height:px;
     top:0;
@@ -242,7 +242,7 @@
     position:absolute;
 }
 .arrtr{
-    border:1px solid black;
+    border:1px solid rgb(120, 37, 37);
     height:130px;
     width:0px;
     right:0;
@@ -251,9 +251,8 @@
     position:absolute;
 }
 .boxbl{
-    border:1px solid rgb(214, 172, 66);
-    height:0px
-
+    border:1px solid rgb(149, 140, 115);
+    height:0px;
     margin:0px 0px 170px 90px;
     width:0px;
     bottom:0;
@@ -261,7 +260,7 @@
     position:absolute;
 }
 .arrbl{
-    border:1px solid pink;
+    border:1px solid rgb(179, 167, 167);
     height:130px;
     width:0px;
     transform:rotate(34deg);
@@ -277,7 +276,7 @@
     position:absolute;
 }
 .arrbr{
-    border:1px solid yellow;
+    border:1px solid ywllow;
     height:130px;
     width:0px;
     bottom:0;
